chore: add font-display to ensure text remains visible during webfont load

--- a/themes/minimalist/static/css/style.css
+++ b/themes/minimalist/static/css/style.css
@@ -3,6 +3,7 @@
   src: url('../fonts/RobotoSlab/RobotoSlab-Regular.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -10,6 +11,7 @@
   src: url('../fonts/RobotoSlab/RobotoSlab-Bold.ttf') format('truetype');
   font-weight: bold;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -17,6 +19,7 @@
   src: url('../fonts/PTSans/PTSans-Regular.woff2') format('woff2');
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -24,6 +27,7 @@
   src: url('../fonts/PTSans/PTSans-Bold.woff2') format('woff2');
   font-weight: bold;
   font-style: normal;
+  font-display: swap;
 }
 
 body {
